# nonce2vec

./: .travis.yml  README.md  pyproject.toml  setup.py
nonce2vec/: main.py  main_new.py
nonce2vec/exceptions/: method.py  parameter.py
nonce2vec/models/: informativeness.py  nonce2vec.py
nonce2vec/utils/: config.py  files.py  immutables.py
tests/: conftest.py  test_nonce2vec.py
tests/assets/: test_sentences.csv  train_sentences.csv
